<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#61AA9F"
    tools:context=".activities.Home">

    <Button
        android:id="@+id/btn_play"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="340dp"
        android:layout_height="135dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="#6F6E6E"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="sans-serif-medium"
        android:onClick="startGame"
        android:text="@string/btn_play"
        android:textColor="@color/btn_text"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/btn_packs"
        android:layout_width="231dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="sans-serif-medium"
        android:onClick="openContentManagement"
        android:text="@string/btn_packs"
        android:textColor="@color/btn_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_play"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/btn_suggest"
        android:layout_width="231dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="sans-serif-medium"
        android:onClick="openProposals"
        android:text="@string/btn_suggest"
        android:textColor="@color/btn_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_packs" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="231dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="sans-serif-medium"
        android:onClick="openSettings"
        android:text="@string/btn_settings"
        android:textColor="@color/btn_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_suggest" />

    <ProgressBar
        android:id="@+id/main_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="326dp"
        android:layout_height="33dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/btn_color"
        android:indeterminate="false"
        android:indeterminateDuration="5500"
        android:indeterminateTint="@color/btn_color"
        android:max="100"
        android:progress="66"
        android:progressTint="@color/btn_color"
        android:scaleY="1"
        android:scrollbarFadeDuration="1200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/btn_settings"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@id/btn_settings"
        app:layout_constraintTop_toBottomOf="@id/progress_info"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/progress_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="@id/btn_settings"
        app:layout_constraintStart_toStartOf="@id/btn_settings"
        app:layout_constraintTop_toBottomOf="@id/btn_settings" />

</androidx.constraintlayout.widget.ConstraintLayout>