<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_optimizationLevel="standard"
    tools:context=".activities.ProposeQuestion">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineMid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/proposal_sender"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/proposal_name"
        android:singleLine="true"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineTop">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/proposal_string"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:hint="@string/proposal_string_hint"
        android:singleLine="false"
        app:errorEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/guidelineMid"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHeight_min="wrap"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/proposal_sender"
        app:layout_constraintWidth_min="wrap">
        <!--        app:layout_constrainedHeight="true"-->

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_proposal_back"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/btn_color"
        android:onClick="goBack"
        android:text="@string/btn_back"
        android:textColor="@color/btn_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/btn_proposal_send"
        app:layout_constraintHeight_min="wrap"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="@+id/guidelineButtonTop"
        app:layout_constraintWidth_min="wrap" />

    <Button
        android:id="@+id/btn_proposal_send"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/btn_color"
        android:onClick="sendProposal"
        android:text="@string/proposal_send"
        android:textColor="@color/btn_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineBottom"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintHeight_min="wrap"
        app:layout_constraintStart_toEndOf="@+id/btn_proposal_back"
        app:layout_constraintTop_toTopOf="@+id/guidelineButtonTop"
        app:layout_constraintWidth_min="wrap" />

</androidx.constraintlayout.widget.ConstraintLayout>